--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "sd-0x-project-react-context-hooks-starwars-datatable-filters",
   "version": "0.1.0",
+  "homepage": "https://kikutii.github.io/kikuti-project-starwars-planets-search",
   "private": true,
   "engines": {
     "node": "16"
@@ -20,6 +21,7 @@
     ]
   },
   "scripts": {
+    "predeploy": "npm run build",
     "cy": "cypress run",
     "cy:open": "cypress open",
     "start": "react-scripts start",
@@ -52,6 +54,7 @@
     "eslint": "^7.32.0",
     "eslint-config-trybe-frontend": "1.2.3",
     "eslint-plugin-sonarjs": "^0.13.0",
+    "gh-pages": "^4.0.0",
     "mocha": "^10.0.0",
     "mochawesome": "^7.1.3",
     "mochawesome-merge": "^4.2.1",
